Updated WARP.md file